cabal-version:      3.0
name:               grpc-hello
synopsis:           
version:            0.1.0
build-type:         Custom
extra-source-files: proto/helloworld.proto
                  , proto/route_guide.proto
tested-with:        GHC==8.10.7
                  , GHC==9.2.8
                  , GHC==9.4.8
                  , GHC==9.6.6
                  , GHC==9.8.2
                  , GHC==9.10.1

custom-setup
  setup-depends:
      base             >= 4.14 && < 5
    , Cabal            >= 3.0  && < 4
    , proto-lens-setup >= 0.4  && < 0.5

common lang
  build-depends:    base >= 4.14 && < 5
  default-language: Haskell2010
  ghc-options:      -Wall

  if impl(ghc >= 9.0)
    ghc-options:
      -Wunused-packages

  default-extensions:
      DataKinds
      OverloadedLabels
      OverloadedStrings
      TypeApplications
      TypeFamilies
      ImportQualifiedPost
      LambdaCase
      BangPatterns
      NumericUnderscores
      FlexibleInstances
      ScopedTypeVariables

library
  import:             lang
  hs-source-dirs:     src
  build-tool-depends: proto-lens-protoc:proto-lens-protoc

  build-depends:
    , aeson              >= 1.5 && < 2.3
    , containers         >= 0.6 && < 0.8
    , time               >= 1.9 && < 1.15
    , grapesy            >= 1.1 && < 1.2
    , proto-lens         >= 0.7 && < 0.8
    , proto-lens-runtime >= 0.7 && < 0.8
  exposed-modules:
      RouteGuide
      Proto.API.RouteGuide
      Proto.API.Helloworld
  other-modules:
      Proto.RouteGuide
      Proto.Helloworld
      Paths_grpc_hello
  autogen-modules:
      Proto.RouteGuide
      Proto.Helloworld
      Paths_grpc_hello

executable greeter_server
  import:         lang
  main-is:        GreeterServer.hs
  hs-source-dirs: app
  ghc-options:    -main-is GreeterServer
  build-depends:  grpc-hello

  build-depends:
      -- inherited
    , grapesy

executable greeter_client
  import:         lang
  main-is:        GreeterClient.hs
  hs-source-dirs: app
  ghc-options:    -main-is GreeterClient
  build-depends:  grpc-hello

  build-depends:
      -- inherited
    , grapesy

executable route_guide_server
  import:          lang
  main-is:         RouteServer.hs
  hs-source-dirs:  app
  ghc-options:     -main-is RouteServer
  build-depends:   grpc-hello

  build-depends:
      -- inherited
    , grapesy
    , time

executable route_guide_client
  import:          lang
  main-is:         RouteClient.hs
  hs-source-dirs:  app
  ghc-options:     -main-is RouteClient
  build-depends:   grpc-hello

  build-depends:
      -- inherited
    , grapesy
    , random >= 1.2 && < 1.4
    , text   >= 1.2 && < 2.2